--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Gulp starter</title>
   <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700|Roboto:400,500,700" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="./assets/bootstrap.min.css" />
   <link rel="stylesheet" type="text/css" href="./css/main.css" />
 </head>
@@ -13,6 +14,7 @@
     <div class="row">
       <div class="col-12">
         <h1>Gulp starter</h1>
+        <h2>Lorem</h2>
         <p>Edit this file in <code>src/pages/index.html</code></p>
       </div>
     </div>
