adds bootstrap grid

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -10,15 +10,32 @@
   <link rel="stylesheet" type="text/css" href="./css/main.css" />
 </head>
 <body>
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-        <h1>Gulp starter</h1>
-        <h2>Lorem</h2>
-        <p>Edit this file in <code>src/pages/index.html</code></p>
+  <header>
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          header
+        </div>
       </div>
     </div>
+  </header>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-8">a</div>
+      <div class="col-4">b</div>
+    </div>
   </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-3">a</div>
+      <div class="col-3">b</div>
+      <div class="col-3">c</div>
+      <div class="col-3">d</div>
+    </div>
+  </div>
+  
 
   <script src="./assets/jquery-3.3.1.min.js"></script>
   <script src="./js/index.js" defer></script>
