adds card and tabs

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -23,7 +23,13 @@
   <div class="container">
     <div class="row">
       <div class="col-8">a</div>
-      <div class="col-4">b</div>
+      <div class="col-4">b
+        <div class="tabs text--small">
+          <div class="tabs__item" data-tab="tab-1">lorem</div>
+          <div class="tabs__item active" data-tab="tab-2">lorem</div>
+          <div class="tabs__item" data-tab="tab-3">lorem</div>
+        </div>
+      </div>
     </div>
   </div>
 
