--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -26,7 +26,7 @@
       <div class="col-4">b
         <div class="tabs text--small">
           <div class="tabs__item" data-tab="tab-1">lorem</div>
-          <div class="tabs__item active" data-tab="tab-2">lorem</div>
+          <div class="tabs__item tabs__item--active" data-tab="tab-2">lorem</div>
           <div class="tabs__item" data-tab="tab-3">lorem</div>
         </div>
       </div>
@@ -35,8 +35,14 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-3">a</div>
-      <div class="col-3">b</div>
+      <div class="col-3">a
+        <button class="button">lorem</button>
+        <button class="button button--primary">lorem foo</button>
+      </div>
+      <div class="col-3">b
+        <span class="badge">loremmm</span>
+        <span class="badge badge--primary">loremmm</span>
+      </div>
       <div class="col-3">c</div>
       <div class="col-3">d</div>
     </div>
