--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Gulp starter</title>
+  <script src="https://unpkg.com/feather-icons"></script>
   <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700|Roboto:400,500,700" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="./assets/bootstrap.min.css" />
@@ -22,12 +23,53 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-8">a</div>
-      <div class="col-4">b
-        <div class="tabs text--small">
-          <div class="tabs__item" data-tab="tab-1">lorem</div>
-          <div class="tabs__item tabs__item--active" data-tab="tab-2">lorem</div>
-          <div class="tabs__item" data-tab="tab-3">lorem</div>
+      <div class="col-7">a</div>
+      <div class="col-5">b
+        <div class="card">
+          <h1>totem dov</h1>
+          <div class="tabs text--small">
+            <div class="tabs__item" data-tab="tab-1">lorem</div>
+            <div class="tabs__item tabs__item--active" data-tab="tab-2">lorem</div>
+            <div class="tabs__item" data-tab="tab-3">lorem</div>
+          </div>
+          <span class="text text--lead">Lorem foo</span>
+          <div class="foo">
+            <div class="box-button">
+              <span class="button button--duw">
+                <span>Lorem</span>
+                <i data-feather="download-cloud"></i>
+              </span>
+            </div>
+            <span class="date">123 123</span>
+          </div>
+          <div class="text--small">Lorem</div>
+          <div class="foo">
+            <div class="box-button">
+              <span class="button button--duw">
+                <span>Lorem</span>
+                <i data-feather="download-cloud"></i>
+              </span>
+            </div>
+            <span class="date">123 123</span>
+          </div>
+          <div class="foo">
+            <div class="box-button">
+              <span class="button button--duw">
+                <span>Lorem</span>
+                <i data-feather="download-cloud"></i>
+              </span>
+            </div>
+            <span class="date">123 123</span>
+          </div>
+          <div class="foo">
+            <div class="box-button">
+              <span class="button button--duw">
+                <span>Lorem</span>
+                <i data-feather="download-cloud"></i>
+              </span>
+            </div>
+            <span class="date">123 123</span>
+          </div>
         </div>
       </div>
     </div>
@@ -37,7 +79,7 @@
     <div class="row">
       <div class="col-3">a
         <button class="button">lorem</button>
-        <button class="button button--primary">lorem foo</button>
+        <button class="button button--primary">lorem foos</button>
       </div>
       <div class="col-3">b
         <span class="badge">loremmm</span>
@@ -51,5 +93,9 @@
 
   <script src="./assets/jquery-3.3.1.min.js"></script>
   <script src="./js/index.js" defer></script>
+
+  <script>
+    feather.replace()
+  </script>
 </body>
 </html>
