adds style for custom scroll

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -26,50 +26,83 @@
       <div class="col-7">a</div>
       <div class="col-5">b
         <div class="card">
+
           <h1>totem dov</h1>
+
           <div class="tabs text--small">
             <div class="tabs__item" data-tab="tab-1">lorem</div>
             <div class="tabs__item tabs__item--active" data-tab="tab-2">lorem</div>
             <div class="tabs__item" data-tab="tab-3">lorem</div>
           </div>
-          <span class="text text--lead">Lorem foo</span>
-          <div class="foo">
-            <div class="box-button">
-              <span class="button button--duw">
-                <span>Lorem</span>
-                <i data-feather="download-cloud"></i>
-              </span>
+
+          <div class="content">
+            <p class="text text--lead">Lorem foo</p>
+            <div class="foo">
+              <div class="box-button">
+                <span class="button button--duw">
+                  <span>Lorem</span>
+                  <i data-feather="download-cloud"></i>
+                </span>
+              </div>
+              <span class="date">123 123</span>
             </div>
-            <span class="date">123 123</span>
-          </div>
-          <div class="text--small">Lorem</div>
-          <div class="foo">
-            <div class="box-button">
-              <span class="button button--duw">
-                <span>Lorem</span>
-                <i data-feather="download-cloud"></i>
-              </span>
+
+            <div class="text--small">Lorem</div>
+
+            <div class="foo">
+              <div class="box-button">
+                <span class="button button--duw">
+                  <span>Lorem</span>
+                  <i data-feather="download-cloud"></i>
+                </span>
+              </div>
+              <span class="date">123 123</span>
             </div>
-            <span class="date">123 123</span>
-          </div>
-          <div class="foo">
-            <div class="box-button">
-              <span class="button button--duw">
-                <span>Lorem</span>
-                <i data-feather="download-cloud"></i>
-              </span>
+
+            <div class="foo">
+              <div class="box-button">
+                <span class="button button--duw">
+                  <span>Lorem</span>
+                  <i data-feather="download-cloud"></i>
+                </span>
+              </div>
+              <span class="date">123 123</span>
             </div>
-            <span class="date">123 123</span>
-          </div>
-          <div class="foo">
-            <div class="box-button">
-              <span class="button button--duw">
-                <span>Lorem</span>
-                <i data-feather="download-cloud"></i>
-              </span>
+
+            <div class="foo">
+              <div class="box-button">
+                <span class="button button--duw">
+                  <span>Lorem</span>
+                  <i data-feather="download-cloud"></i>
+                </span>
+              </div>
+              <span class="date">123 123</span>
             </div>
-            <span class="date">123 123</span>
+
+            <div class="foo">
+              <div class="box-button">
+                <span class="button button--duw">
+                  <span>Lorem</span>
+                  <i data-feather="download-cloud"></i>
+                </span>
+              </div>
+              <span class="date">123 123</span>
+            </div>
+
+            <div class="foo">
+              <div class="box-button">
+                <span class="button button--duw">
+                  <span>Lorem</span>
+                  <i data-feather="download-cloud"></i>
+                </span>
+              </div>
+              <span class="date">123 123</span>
+            </div>
+            
           </div>
+
+          <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas qui perferendis dicta ratione! Assumenda.</span>
+
         </div>
       </div>
     </div>
