correct html and buttom css

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -38,60 +38,60 @@
           <div class="content">
             <p class="text text--lead">Lorem foo</p>
             <div class="foo">
-              <div class="box-button">
-                <span class="button button--duw">
+              <div class="box-download">
+                <span class="download">
                   <span>Lorem</span>
                   <i data-feather="download-cloud"></i>
                 </span>
               </div>
-              <span class="date">123 123</span>
+              <span class="date">12.31.23</span>
             </div>
 
             <div class="text--small">Lorem</div>
 
             <div class="foo">
-              <div class="box-button">
-                <span class="button button--duw">
+              <div class="box-download">
+                <span class="download">
                   <span>Lorem</span>
                   <i data-feather="download-cloud"></i>
                 </span>
               </div>
-              <span class="date">123 123</span>
+              <span class="date">12.31.23</span>
             </div>
 
             <div class="foo">
-              <div class="box-button">
-                <span class="button button--duw">
+              <div class="box-download">
+                <span class="download">
                   <span>Lorem</span>
                   <i data-feather="download-cloud"></i>
                 </span>
               </div>
-              <span class="date">123 123</span>
+              <span class="date">12.31.23</span>
             </div>
 
             <div class="foo">
-              <div class="box-button">
-                <span class="button button--duw">
+              <div class="box-download">
+                <span class="download">
                   <span>Lorem</span>
                   <i data-feather="download-cloud"></i>
                 </span>
               </div>
-              <span class="date">123 123</span>
+              <span class="date">12.31.23</span>
             </div>
 
             <div class="foo">
-              <div class="box-button">
-                <span class="button button--duw">
+              <div class="box-download">
+                <span class="download">
                   <span>Lorem</span>
                   <i data-feather="download-cloud"></i>
                 </span>
               </div>
-              <span class="date">123 123</span>
+              <span class="date">12.31.23</span>
             </div>
 
             <div class="foo">
-              <div class="box-button">
-                <span class="button button--duw">
+              <div class="box-download">
+                <span class="download">
                   <span>Lorem</span>
                   <i data-feather="download-cloud"></i>
                 </span>
