--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -36,7 +36,7 @@
           </div>
 
           <div class="download-list">
-            
+
             <p class="text text--lead">Lorem foo</p>
              
             <div class="download-list__item">
@@ -104,7 +104,29 @@
         </div>
 
         <div class="card">
+          <div class="stats">
 
+            <div class="stats__item">
+              <div class="text--lead">123 456</div>
+              <div class="text--smallest">lorem </div>
+            </div>
+
+            <div class="stats__item">
+              <div class="text--lead">458</div>
+              <div class="text--smallest">lorem </div>
+            </div>
+
+            <div class="stats__item">
+              <div class="text--lead">123 45</div>
+              <div class="text--smallest">lorem </div>
+            </div>
+
+            <div class="stats__item">
+              <div class="text--lead">45</div>
+              <div class="text--smallest">lorem </div>
+            </div>
+
+          </div>
         </div>
 
       </div>
