--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -27,6 +27,11 @@
       <div class="col-5">b
         <div class="card">
 
+          <div class="label">
+            <i data-feather="download-cloud"></i>
+            <span class="label__text">Lorem, ipsum dolor.</span>
+          </div>
+
           <h1>totem dov</h1>
 
           <div class="tabs text--small">
