--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -25,7 +25,7 @@
     <div class="row">
       <div class="col-7">a</div>
       <div class="col-5">b
-        <div class="card">
+        <div class="card card__content">
 
           <div class="label">
             <i data-feather="download-cloud"></i>
@@ -108,7 +108,7 @@
 
         </div>
 
-        <div class="card">
+        <div class="card card__content">
           <div class="stats">
 
             <div class="stats__item">
@@ -148,7 +148,55 @@
         <span class="badge">loremmm</span>
         <span class="badge badge--primary">loremmm</span>
       </div>
-      <div class="col-3">c</div>
+      <div class="col-3">
+        <div class="card--rounded">
+          <div class="card--rounded__box-img">
+
+            <img class="card--rounded__img" src="././src/assets/img/1.jpg" alt="">
+          </div>
+          <div class="card__content">
+            <div class="text--lead">Lorem, ipsum dolor.</div>
+            <p>Lorem ipsum dolor, amet consectetur adipisicing elit. Officia magnam laudantium vitae!</p>
+
+            <div class="block-text">
+              <div class="text--small">20 000
+                <span  class="text--smallest">Torem</span>
+              </div>
+              <div>23%</div>
+            </div>
+
+            <div class="stats">
+
+              <div class="stats__item">
+                <div class="text--lead">12 456</div>
+                <div class="text--smallest">lorem </div>
+              </div>
+  
+              <div class="stats__item">
+                <div class="text--lead">12</div>
+                <div class="text--smallest">lorem </div>
+              </div>
+  
+              <div class="stats__item">
+                <div class="text--lead">45</div>
+                <div class="text--smallest">lorem </div>
+              </div>
+  
+            </div>
+
+            <div class="opinion">
+              <div class="opinion__box">
+                  <i data-feather="heart" class="h-50 m-50"></i>
+              </div>
+              <div class="opinion__box">
+                  <i data-feather="message-square"  class="h-50 m-50"></i>
+              </div>
+              <button class="button button--primary text--smallest">foos</button>
+            </div>
+
+          </div>
+        </div>
+      </div>
       <div class="col-3">d</div>
     </div>
   </div>
