adds block diagram

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -158,11 +158,13 @@
             <div class="text--lead">Lorem, ipsum dolor.</div>
             <p>Lorem ipsum dolor, amet consectetur adipisicing elit. Officia magnam laudantium vitae!</p>
 
-            <div class="block-text">
-              <div class="text--small">20 000
-                <span  class="text--smallest">Torem</span>
+            <div>
+              <div class="box-text">
+                <div><span class="text--small"> 20 000</span>Torem</div>
+                <div>23%</div>
               </div>
-              <div>23%</div>
+              <div class="diagram"></div>
+              <div class="diagram__result"></div>
             </div>
 
             <div class="stats">
