adds badge button

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -150,10 +150,13 @@
       </div>
       <div class="col-3">
         <div class="card--rounded">
-          <div class="card--rounded__box-img">
 
+          <div class="card--rounded__box-img">
             <img class="card--rounded__img" src="././src/assets/img/1.jpg" alt="">
           </div>
+
+          <span class="badge badge__blue">loremmm</span>
+
           <div class="card__content">
             <div class="text--lead">Lorem, ipsum dolor.</div>
             <p>Lorem ipsum dolor, amet consectetur adipisicing elit. Officia magnam laudantium vitae!</p>
