--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -116,23 +116,23 @@
             <div class="stats">
   
               <div class="stats__item">
-                <div class="text--lead">123 456</div>
-                <div class="text--smallest">lorem </div>
+                <p class="text--lead mb-0">12 456</p>
+                <p class="text--smallest mb-0">lorem </p>
               </div>
   
               <div class="stats__item">
-                <div class="text--lead">458</div>
-                <div class="text--smallest">lorem </div>
+                <p class="text--lead mb-0">128</p>
+                <p class="text--smallest mb-0">lorem </p>
               </div>
   
               <div class="stats__item">
-                <div class="text--lead">123 45</div>
-                <div class="text--smallest">lorem </div>
+                <p class="text--lead mb-0">12</p>
+                <p class="text--smallest mb-0">lorem </p>
               </div>
   
               <div class="stats__item">
-                <div class="text--lead">45</div>
-                <div class="text--smallest">lorem </div>
+                <p class="text--lead mb-0">12</p>
+                <p class="text--smallest mb-0">lorem </p>
               </div>
   
             </div>
@@ -179,18 +179,18 @@
             <div class="stats">
 
               <div class="stats__item">
-                <div class="text--lead">12 456</div>
-                <div class="text--smallest">lorem </div>
+                <p class="text--lead mb-0">12 456</p>
+                <p class="text--smallest mb-0">lorem </p>
               </div>
   
               <div class="stats__item">
-                <div class="text--lead">12</div>
-                <div class="text--smallest">lorem </div>
+                <p class="text--lead mb-0">12</p>
+                <p class="text--smallest mb-0">lorem </p>
               </div>
   
               <div class="stats__item">
-                <div class="text--lead">45</div>
-                <div class="text--smallest">lorem </div>
+                <p class="text--lead mb-0">45</p>
+                <p class="text--smallest mb-0">lorem </p>
               </div>
   
             </div>
