adds block img video

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -23,8 +23,32 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-7">a</div>
-      <div class="col-5">b
+      <div class="col-7">
+        <div class="box-img">
+          <img class="box-img__img" src="././src/assets/img/3.jpg" alt="">
+        </div>
+        <div class="row">
+          <div class="col-2">
+            <img class="box-img__img" src="././src/assets/img/2.png" alt="">
+          </div>
+          <div class="col-2">
+            <img class="box-img__img" src="././src/assets/img/2.png" alt="">
+          </div>
+          <div class="col-2">
+            <img class="box-img__img" src="././src/assets/img/2.png" alt="">
+          </div>
+          <div class="col-2">
+            <img class="box-img__img" src="././src/assets/img/2.png" alt="">
+          </div>
+          <div class="col-2">
+            <img class="box-img__img" src="././src/assets/img/2.png" alt="">
+          </div>
+          <div class="col-2">
+            <img class="box-img__img" src="././src/assets/img/2.png" alt="">
+          </div>
+        </div>
+      </div>
+      <div class="col-5">
         <div class="card">
 
           <div class="card__content">
