change button badge

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -185,7 +185,10 @@
             <img class="card--rounded__img" src="././src/assets/img/1.jpg" alt="">
           </div>
 
-          <span class="button__badge button__badge--blue">loremmm</span>
+          <button class="button__badge button__badge--blue">
+            <span class="button__badge--text">lorem</span>
+            <i data-feather="activity"></i>
+          </button>
 
           <div class="card__content">
             <span class="text--lead">Lorem, ipsum dolor.</span>
@@ -193,7 +196,7 @@
 
             <div>
               <div class="box-text">
-                <span><span class="text--small"> 20 000</span>Torem</span>
+                <span><span class="text--small"> 20 000</span> Torem</span>
                 <div>23%</div>
               </div>
               <div class="diagram"></div>
