--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -77,7 +77,7 @@
                 <span class="download__date">12.31.23</span>
               </div>
   
-              <div class="text--small">Lorem</div>
+              <p class="text--small">Lorem</p>
   
               <div class="download-list__item">
                 <div class="download__file">
@@ -171,12 +171,8 @@
   <div class="container">
     <div class="row">
       <div class="col-3">a
-        <button class="button">lorem</button>
-        <button class="button button--primary">lorem foos</button>
       </div>
       <div class="col-3">b
-        <span class="button__badge">loremmm</span>
-        <span class="button__badge button__badge--primary">loremmm</span>
       </div>
       <div class="col-3">
         <div class="card--rounded">
