--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -177,8 +177,8 @@
       <div class="col-3">
         <div class="card--rounded">
 
-          <div class="card--rounded__box-img">
-            <img class="card--rounded__img" src="././src/assets/img/1.jpg" alt="">
+          <div class="card__img-container">
+            <img class="card__image" src="././src/assets/img/1.jpg" alt="">
           </div>
 
           <button class="button__badge button__badge--blue">
