adds html header

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -12,10 +12,29 @@
 </head>
 <body>
   <header>
-    <div class="container">
+    <div class="header">
+    <div class="container-fluid">
       <div class="row">
         <div class="col-12">
-          header
+          <div class="row">
+
+              <div class="col-6">
+                <div>
+                  <img class="header__logo" src="././src/assets/img/5.jpg" alt="logo">
+                  <i data-feather="search"></i>
+                    <ul>
+                      <li>1</li>
+                      <li>2</li>
+                    </ul>
+                  <button>button</button>
+                </div>
+              </div>
+  
+              <div class="col-6">
+                <button>right</button>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
