--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -19,19 +19,27 @@
           <div class="row">
 
               <div class="col-6">
-                <div>
+                <div class="header__content">
                   <img class="header__logo" src="././src/assets/img/5.jpg" alt="logo">
                   <i data-feather="search"></i>
-                    <ul>
-                      <li>1</li>
-                      <li>2</li>
+                    <ul class="header__list">
+                      <li class="header__item">kokos</li>
+                      <li class="header__item">koko</li>
+                      <li class="header__item">pokpok</li>
+                      <li class="header__item">tootem</li>
+                      <li class="header__item">foo</li>
+                      <li class="header__item">week</li>
                     </ul>
-                  <button>button</button>
+                  <select name="" id="select-box">
+                    <option value="">aaa aa</option>
+                    <option value="">bbb</option>
+                    <option value="">ccc</option>
+                  </select>
                 </div>
               </div>
   
               <div class="col-6">
-                <button>right</button>
+                <!-- <button>right</button> -->
               </div>
             </div>
           </div>
