change layout of header

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -17,19 +17,21 @@
       <div class="row">
         <div class="col-12">
           <div class="row">
+              <div class="col-auto">
+                <img class="header__logo" src="././src/assets/img/5.jpg" alt="logo">
+              </div>
 
-              <div class="col-6">
+              <div class="col d-flex align-items-center">
                 <div class="header__content">
-                  <img class="header__logo" src="././src/assets/img/5.jpg" alt="logo">
                   <i data-feather="search"></i>
-                    <ul class="header__list">
-                      <li class="header__item">kokos</li>
-                      <li class="header__item">koko</li>
-                      <li class="header__item">pokpok</li>
-                      <li class="header__item">tootem</li>
-                      <li class="header__item">foo</li>
-                      <li class="header__item">week</li>
-                    </ul>
+                  <ul class="header__list">
+                    <li class="header__item">kokos</li>
+                    <li class="header__item">koko</li>
+                    <li class="header__item">pokpok</li>
+                    <li class="header__item">tootem</li>
+                    <li class="header__item">foo</li>
+                    <li class="header__item">week</li>
+                  </ul>
                   <select name="" id="select-box">
                     <option value="">aaa aa</option>
                     <option value="">bbb</option>
@@ -38,8 +40,8 @@
                 </div>
               </div>
   
-              <div class="col-6">
-                <!-- <button>right</button> -->
+              <div class="col-auto">
+                <button>right</button>
               </div>
             </div>
           </div>
