adds change header right

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -40,8 +40,12 @@
                 </div>
               </div>
   
-              <div class="col-auto">
-                <button>right</button>
+              <div class="col-auto d-flex align-items-center">
+                <button class="header__button d-flex align-items-center">
+                  <span class="header__button--text">200</span>
+                  <i data-feather="loader"></i>
+                </button>
+                <img class="header__avatar" src="././src/assets/img/avatar.jpg" alt="">
               </div>
             </div>
           </div>
