adds border bottom li active element and correct header

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -16,7 +16,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-12">
-          <div class="row">
+          <div class="row align-items-center">
               <div class="col-auto">
                 <img class="header__logo" src="././src/assets/img/5.jpg" alt="logo">
               </div>
@@ -25,7 +25,7 @@
                 <div class="header__content">
                   <i data-feather="search"></i>
                   <ul class="header__list">
-                    <li class="header__item">kokos</li>
+                    <li class="header__item header__item--active">kokos</li>
                     <li class="header__item">koko</li>
                     <li class="header__item">pokpok</li>
                     <li class="header__item">tootem</li>
